--- a/create-admin-set-budget-email/create-admin-set-budget-email.yaml
+++ b/create-admin-set-budget-email/create-admin-set-budget-email.yaml
@@ -1,4 +1,5 @@
 # File: create-admin-set-budget-email.yaml
+# Author: Anuradha Iyer
 
 # This CloudFormation template performs the following tasks:
 
